<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sport Social Network</string>
    <string name="internal_error">Error interno</string>
    <string name="server_error">Error en el servidor de la app</string>

    <string name="continue_">Continuar</string>

    <string name="leave_app_text">Está seguro que desea salir de la aplicación? De este modo dejará de recibir notificaciones.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_settings">Configuració</string>
    <string name="event">Evento</string>
    <string name="eventos">Eventos</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="historico">Histórico</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificacions</string>

    <string name="join">Unirse</string>
    <string name="unjoin">Desunirse</string>
    <string name="join_confirmation">Estás seguro que quieres unirte al evento?</string>
    <string name="view_details">Ver</string>
    <string name="filters">Filtros</string>
    <string name="pref_alias">Alias</string>
    <string name="pref_new_event">Al crearse nuevo evento</string>
    <string name="pref_new_event_managed_field">En pista gestionada</string>
    <string name="pref_new_event_unmanaged_field">En pista no gestionada</string>
    <string name="pref_new_event_member">Al unirse un miembro a uno de mis eventos</string>
    <string name="new_event">Nuevo evento</string>
    <string name="event_detail">Ver</string>
    <string name="leave">Salir</string>
    <string name="leave_confirmation">Estás seguro que quieres salir del evento?</string>


    <!-- New Event_OLD Wizard Activity -->
    <string name="title_activity_new_event_wizard">Nuevo Evento</string>
    <string name="features_button">Caract.</string>
    <string name="zone_button">Pista</string>
    <string name="comfirmation_button">Resumen</string>

    <string name="sport">Deporte:</string>
    <string name="num_min_players">Min. jugadores:</string>
    <string name="num_max_players">Max. jugadores:</string>
    <string name="num_players">Jugadores: </string>
    <string name="players"><b>Jugadores:</b> %1$d  Min: %2$d  Max: %3$d</string>
    <string name="max_price_player">Max precio/jugador:</string>
    <string name="date_hour">Fecha &amp; hora:</string>
    <string name="bar">/</string>
    <string name="place">Lugar:</string>

    <string name="sport_spinner_prompt">Seleccione un deporte</string>

    <string name="radio_button_zone">Población</string>
    <string name="radio_button_field">Pista</string>
    <string name="radio_button_map">Zona</string>
    <string name="marker_title">Àrea de busqueda</string>

    <string name="crear">Crear</string>
    <string name="ok">Ok</string>
    <string name="error_validate_event">Error en la creación del evento: Compruebe que los parámetros son correctos</string>
    <string name="ok_creation_event">El evento se ha creado satisfactoriamente</string>
    <string name="initial_message_map_new_event"></string>
    <string name="title_activity_filters">Filtros</string>
    <string name="date_from">Fecha desde: </string>
    <string name="date_to">Fecha hasta: </string>

    <string name="activateNetwork">Es necesario activar la red</string>

    <!-- Event_OLD detail -->
    <string name="jugadores">Jugadores</string>
    <string name="userName">Nombre</string>
    <string name="userCity">Ciudad</string>
    <string name="userAge">Edad</string>
    <string name="favSportUser">Deporte favorito</string>
    <string name="emailUser">Email</string>
    <string name="report">Reportar</string>
    <string name="user_info">Información del usuario</string>

    <string name="poblacion">Población</string>
    <string name="confirmar_reporte">Reportar Usuario</string>
    <string name="confirmar_reporte_text">Está seguro que quiere reportar el usuario?</string>
    <string name="close">Cerrar</string>

    <string name="mapType">Tipo de mapa</string>
    <string name="chooseMapType">Seleccione un tipo de mapa</string>
    <string name="buildings_map_checkbox">Edificios 3D</string>

    <string name="no_managed_entity_selected">Entidad no gestionada seleccionada</string>
    <string name="no_managed_entity_selected_text">No es posible asegurar la disponibilidad de la pista, debido a que no existe una entidad registrada que la gestione.</string>
    <string name="duration">Tiempo de juego (min):</string>

    <!-- Notificaciones -->
    <string name="notif_type_0">Nuevo evento</string>
    <string name="notif_type_1">El evento crece</string>
    <string name="notif_type_2">Evento cancelado</string>
    <string name="notif_type_3">Evento reservado</string>

    <string name="notif_type_0_text">Se ha creado un nuevo evento</string>
    <string name="notif_type_1_text">Un usuario se ha unido a un evento al que perteneces.</string>
    <string name="notif_type_2_text">El evento ha sido cancelado.</string>
    <string name="notif_type_3_text">El evento ha sido reservado.</string>

    <string-array name="mapTypes">
        <item>De carreteras</item>
        <item>Satélite</item>
        <item>Hibrido</item>
    </string-array>
    <string-array name="mapTypes_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>
    <string name="loading">Cargando...</string>
    <string name="selectsport">Seleccione un deporte</string>
    <string name="joinOk">Se ha unido al evento.</string>
    <string name="leaveOk">Ha salido del evento.</string>
    <string name="atencion">Atención!</string>
    <string name="serverError">Error en el servidor: </string>
    <string name="noEvents">No hay eventos.</string>
    <string name="clera_filters">Eliminar filtro</string>


    <string name="cancelation">Tiempo límite para cancelación (min):</string>
    <string name="cancelation1">Tiempo cancelación (min):</string>

    <string name="zone">Zona:</string>
    <string name="OPEN">ABIERTO</string>
    <string name="RESERVED">RESERVADO</string>
    <string name="FINISHED">FINALIZADO</string>
    <string name="CANCELED">CANCELADO</string>
    <string name="title_activity_event_detail_tabed">EventDetailTabedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="information">Información</string>
    <string name="localization">Mapa</string>
</resources>
