<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_alias"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <ListPreference
        android:key="mapType"
        android:title="@string/mapType"
        android:dialogTitle="@string/chooseMapType"
        android:entries="@array/mapTypes"
        android:entryValues="@array/mapTypes_values"
        android:defaultValue="1" />
    <SwitchPreference
        android:key="buildings_map_checkbox"
        android:title="@string/buildings_map_checkbox"
        android:defaultValue="false" />
</PreferenceScreen>
