<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="notifications_new_event"
        android:title="@string/pref_new_event"
        android:defaultValue="true" />

    <SwitchPreference
        android:dependency="notifications_new_event"
        android:key="notifications_new_event_managed"
        android:title="@string/pref_new_event_managed_field"
        android:defaultValue="true" />

    <SwitchPreference
        android:dependency="notifications_new_event"
        android:key="notifications_new_event_unmanaged"
        android:title="@string/pref_new_event_unmanaged_field"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="notifications_new_message"
        android:title="@string/pref_new_event_member"
        android:defaultValue="true" />

</PreferenceScreen>
