<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/new_event_wizard_step_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/sport"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sports_spinner"></Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/num_players"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/num_players_edit_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/max_price_player"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/max_price_player_edit_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/date_hour"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_hour_edit_text"
            android:onClick="handleClick"
            android:editable="false"/>
        <!--<DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"></DatePicker>
        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TimePicker>-->

    </LinearLayout>
</RelativeLayout>
