<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ssn.eps.ssn.activities.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/filters"
            android:id="@+id/button_filters"
            android:layout_weight="1"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/clera_filters"
            android:id="@+id/button_clear_filters"
            android:enabled="false"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:visibility="gone"
        android:text="@string/noEvents"
        android:gravity="center_horizontal" />

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventsList"
        android:layout_gravity="center_vertical"
        android:groupIndicator="@null"
        style="@android:style/Widget.ExpandableListView"/>

</LinearLayout>
