<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_filters"
    tools:context="com.ssn.eps.ssn.activities.FiltersActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:text="@string/sport"
                android:layout_weight=".6"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sport_filter"
                android:layout_weight=".4"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:text="@string/num_min_players"
                android:layout_weight=".6"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/min_players_filter"
                android:inputType="number"
                android:layout_weight=".4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:text="@string/max_price_player"
                android:layout_weight=".6"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/max_price_filter"
                android:inputType="numberDecimal"
                android:layout_weight=".4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:text="@string/date_from"
                android:layout_weight=".4"/>
            <EditText
                android:id="@+id/date_from_filter"
                android:editable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:text="@string/date_to"
                android:layout_weight=".4"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/date_to_filter"
                android:editable="false"
                android:onClick=""
                android:layout_weight=".6"/>
        </LinearLayout>
        <Button
            android:id="@+id/but_accept_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:gravity="center"
            android:layout_gravity="right"/>
    </LinearLayout>
</ScrollView>
