<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_state"
            android:textStyle="bold"
            android:layout_gravity="right"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvSport"
                android:text="@string/sport"
                android:textStyle="bold"
                android:layout_weight=".5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvSport_value"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDateTime"
                android:text="@string/date_hour"
                android:textStyle="bold"
                android:layout_weight=".5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDateTime_value"
                android:layout_weight=".5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDateTimeDuration"
                android:text="@string/duration"
                android:textStyle="bold"
                android:layout_weight=".5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDateTimeDuration_value"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvNumPlayers"
                android:text="@string/num_players"
                android:textStyle="bold"
                android:layout_weight=".5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvNumPlayers_value"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvMax_price"
                android:text="@string/max_price_player"
                android:textStyle="bold"
                android:layout_weight=".5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvMaxprice_value"
                android:layout_weight=".5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/zoneL"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvZone"
                android:text="@string/zone"
                android:textStyle="bold"
                android:layout_weight=".5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvZone_value"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_titleList"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/jugadores"
                android:layout_weight=".5"
                android:textSize="15dp" />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_players" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/action_button"
            android:layout_gravity="right"
            />
    </LinearLayout>
</RelativeLayout>

